# ncit

./: .gitignore  Makefile  README.md  odk.sh  project.Makefile  pyproject.toml
.github/workflows/: build.yml  release.yml
config/: property-map.sssom.tsv
docs/: pipeline_incidents.md  plan.md  release_notes.md
env/: .env.example
linkml/: mondo_source_schema.yaml
reports/: metrics.json  mirror-top-level-counts.tsv
scripts/: acquire.py  transform.py  verify.py
sparql/: count_classes_by_top_level.sparql
src/ncit/: datamodel.py
